refactored SesameQuery transformers updated version to 1.1.3